--- a/datav-svg/package.json
+++ b/datav-svg/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "echarts": "^5.1.2",
     "uuid": "^8.3.2",
     "vue": "^3.0.0",
+    "vue-echarts": "^6.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
